<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">
    <TextView
        android:text="@string/txt_title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rubik_medium"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="@color/mycolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_4"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>
    <EditText
        android:id="@+id/edt_email_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edit_text"
        android:textColorHint="#878686"
        android:textColor="@color/black"
        android:hint="@string/edt_email"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"/>

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:hint="@string/edt_pass"
        android:textColorHint="#878686"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/custom_edit_text" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="22dp"
        android:text="@string/txt_quen_mk"
        android:textColor="@color/mycolor"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/txt_dangki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="22dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Đăng kí"
        android:textColor="@color/mycolor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_dang_nhap"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txt_lua_chon_khac"
        android:textSize="22sp"
        android:textColor="@color/mycolor"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_icon_fb"/>
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_icon_gmail"/>
       </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>